Added Things Left

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
 
     <base href="/">
 <!--  LIBS -->
+<!-- Things left for Implementing
+
+RAnge ---Price Selection in Angular
+Min and MAx should be there in slider
+
+based on this you will perform the search
+
+
+Search by Category is still not working 
+
+Sort by Price is also not working properly
+
+Design should be chamged to Angular Material Now for Panel Support Atleast
+
+
+-->
 
 
 
